force-app/main/default/objects/DisputedItem__c/DisputedItem__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar os itens contestados por fatura.</description>
    <label>Item Contestado</label>
    <nameField>
        <label>Item Contestado</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itens Contestados</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>