force-app/main/default/objects/DisputedItem__c/fields/AdjustmentDays__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentDays__c</fullName>
    <label>Dias de Ajuste</label>
    <length>255</length>
    <type>Text</type>
</CustomField>