force-app/main/default/objects/DisputedItem__c/fields/AvailableAmount__c.field-meta.xml
<CustomField>
    <fullName>AvailableAmount__c</fullName>
    <label>Valor Atual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>