force-app/main/default/objects/DisputedItem__c/fields/BalanceUnit__c.field-meta.xml
<CustomField>
    <fullName>BalanceUnit__c</fullName>
    <description>[Rivanilson Costa - 20/08/2024 - J62 - BL15] Campo Unidade do Saldo para ser utilizado em Relatório de •	Impugnações e para mapeamento de relatório de Fraudes, onde o PWC vem buscar informações de Contestações/Impugnações.</description>
    <label>Unidade do Saldo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Events</fullName>
                <label>Eventos</label>
            </value>
            <value>
                <fullName>R$</fullName>
            </value>
            <value>
                <fullName>Minutes</fullName>
                <label>Minutos</label>
            </value>
            <value>
                <fullName>Kbytes</fullName>
                <isActive>false</isActive>
                <label>Kbytes</label>
            </value>
            <value>
                <fullName>Segundos</fullName>
                <isActive>false</isActive>
                <label>Segundos</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>