force-app/main/default/objects/DisputedItem__c/fields/BillingEndDate__c.field-meta.xml
<CustomField>
    <fullName>BillingEndDate__c</fullName>
    <label>Data Fim Faturamento</label>
    <type>Date</type>
</CustomField>