force-app/main/default/objects/DisputedItem__c/fields/BillingStartDate__c.field-meta.xml
<CustomField>
    <fullName>BillingStartDate__c</fullName>
    <label>Data de Início Faturamento</label>
    <type>Date</type>
</CustomField>