force-app/main/default/objects/DisputedItem__c/fields/BundleId__c.field-meta.xml
<CustomField>
    <fullName>BundleId__c</fullName>
    <label>Id do Pacote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>