force-app/main/default/objects/DisputedItem__c/fields/CACImpugnValue__c.field-meta.xml
<CustomField>
    <fullName>CACImpugnValue__c</fullName>
    <description>Valor da caixa de destino CAC</description>
    <label>Valor Impugnado CAC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>