force-app/main/default/objects/DisputedItem__c/fields/CACValue__c.field-meta.xml
<CustomField>
    <fullName>CACValue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Valor da caixa de origem CAC</description>
    <label>Valor CAC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>