force-app/main/default/objects/DisputedItem__c/fields/CAEImpugnValue__c.field-meta.xml
<CustomField>
    <fullName>CAEImpugnValue__c</fullName>
    <description>Valor da caixa de destino CAE</description>
    <label>Valor Impugnado CAE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>