force-app/main/default/objects/DisputedItem__c/fields/CAEValue__c.field-meta.xml
<CustomField>
    <fullName>CAEValue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Valor da caixa de origem CAE</description>
    <label>Valor CAE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>