force-app/main/default/objects/DisputedItem__c/fields/CallDebitValue__c.field-meta.xml
<CustomField>
    <fullName>CallDebitValue__c</fullName>
    <description>Valor total cobrado na consulta de evento - Voice.</description>
    <label>Valor Total Cobrado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>