force-app/main/default/objects/DisputedItem__c/fields/CalledPartyNumber__c.field-meta.xml
<CustomField>
    <fullName>CalledPartyNumber__c</fullName>
    <description>Número destino na consulta de evento - Voice.</description>
    <label>Linha Destino</label>
    <length>30</length>
    <type>Text</type>
</CustomField>