force-app/main/default/objects/DisputedItem__c/fields/CallingPartyNumber__c.field-meta.xml
<CustomField>
    <fullName>CallingPartyNumber__c</fullName>
    <description>Número origem na consulta de evento.</description>
    <label>Linha Origem</label>
    <length>30</length>
    <type>Text</type>
</CustomField>