force-app/main/default/objects/DisputedItem__c/fields/CallRatedSeconds__c.field-meta.xml
<CustomField>
    <fullName>CallRatedSeconds__c</fullName>
    <description>Tempo tarifado em segundos na consulta de evento - Voice.</description>
    <label>Tempo Tarifado</label>
    <length>30</length>
    <type>Text</type>
</CustomField>