force-app/main/default/objects/DisputedItem__c/fields/CallType__c.field-meta.xml
<CustomField>
    <fullName>CallType__c</fullName>
    <description>Tipo de chamada na consulta de evento - Voice.</description>
    <label>Tipo de Chamada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>