force-app/main/default/objects/DisputedItem__c/fields/CATValue__c.field-meta.xml
<CustomField>
    <fullName>CATValue__c</fullName>
    <label>Valor CAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>