force-app/main/default/objects/DisputedItem__c/fields/ChallengeValue__c.field-meta.xml
<CustomField>
    <fullName>ChallengeValue__c</fullName>
    <description>[Rivanilson Costa - 13/06/2024 - J62 - BL15] Valor da Impugnação concedido para o item.</description>
    <label>Valor Impugnação</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>