force-app/main/default/objects/DisputedItem__c/fields/ChargeCategory__c.field-meta.xml
<CustomField>
    <fullName>ChargeCategory__c</fullName>
    <description>Classificação do item da fatura, segundo a visão de negócio.</description>
    <label>Tipo do Item</label>
    <length>80</length>
    <type>Text</type>
</CustomField>