force-app/main/default/objects/DisputedItem__c/fields/ComboIndicator__c.field-meta.xml
<CustomField>
    <fullName>ComboIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indicador de Combo Digital</label>
    <type>Checkbox</type>
</CustomField>