force-app/main/default/objects/DisputedItem__c/fields/Csp__c.field-meta.xml
<CustomField>
    <fullName>Csp__c</fullName>
    <label>CSP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>