force-app/main/default/objects/DisputedItem__c/fields/CspOperatorName__c.field-meta.xml
<CustomField>
    <fullName>CspOperatorName__c</fullName>
    <label>Nome da Operadora CSP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>