force-app/main/default/objects/DisputedItem__c/fields/CustomerAccountId__c.field-meta.xml
<CustomField>
    <fullName>CustomerAccountId__c</fullName>
    <label>Conta do Cliente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>