force-app/main/default/objects/DisputedItem__c/fields/DCAValue__c.field-meta.xml
<CustomField>
    <fullName>DCAValue__c</fullName>
    <label>Valor DCA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>