force-app/main/default/objects/DisputedItem__c/fields/DDDLocation__c.field-meta.xml
<CustomField>
    <fullName>DDDLocation__c</fullName>
    <description>DDD de origem na consulta de evento - Voice.</description>
    <label>DDD Origem</label>
    <length>25</length>
    <type>Text</type>
</CustomField>