force-app/main/default/objects/DisputedItem__c/fields/DestinationType__c.field-meta.xml
<CustomField>
    <fullName>DestinationType__c</fullName>
    <description>Tipo do destinatário retornado da consulta de evento - Voice.</description>
    <label>Tipo do Destinatário</label>
    <length>255</length>
    <type>Text</type>
</CustomField>