force-app/main/default/objects/DisputedItem__c/fields/Discounts__c.field-meta.xml
<CustomField>
    <fullName>Discounts__c</fullName>
    <label>Descontos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>