force-app/main/default/objects/DisputedItem__c/fields/DisputedValue__c.field-meta.xml
<CustomField>
    <fullName>DisputedValue__c</fullName>
    <description>Valor inicial do Item de Contestação</description>
    <label>Valor Contestado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>