force-app/main/default/objects/DisputedItem__c/fields/DoubleValue__c.field-meta.xml
<CustomField>
    <fullName>DoubleValue__c</fullName>
    <description>[Rivanilson Costa - 13/06/2024 - J62 - BL15] Valor em Dobro, quando houver.</description>
    <label>Valor em Dobro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>