force-app/main/default/objects/DisputedItem__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Duração da chamada em segundos na consulta de evento - Voice.</description>
    <label>Duração da Chamada</label>
    <length>30</length>
    <type>Text</type>
</CustomField>