force-app/main/default/objects/DisputedItem__c/fields/FinancialAccount__c.field-meta.xml
<CustomField>
    <fullName>FinancialAccount__c</fullName>
    <label>Conta Financeira</label>
    <length>255</length>
    <type>Text</type>
</CustomField>