force-app/main/default/objects/DisputedItem__c/fields/FineValue__c.field-meta.xml
<CustomField>
    <fullName>FineValue__c</fullName>
    <description>[Rivanilson Costa - 13/06/2024 - J62 - BL15] Valor de Multa, quando houver.</description>
    <label>Valor Multa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>