force-app/main/default/objects/DisputedItem__c/fields/Fit__c.field-meta.xml
<CustomField>
    <fullName>Fit__c</fullName>
    <label>Ajustes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>