force-app/main/default/objects/DisputedItem__c/fields/FrontEndCode__c.field-meta.xml
<CustomField>
    <fullName>FrontEndCode__c</fullName>
    <label>Código Front End</label>
    <length>255</length>
    <type>Text</type>
</CustomField>