force-app/main/default/objects/DisputedItem__c/fields/hasReachedLimitOfImpugnations__c.field-meta.xml
<CustomField>
    <fullName>hasReachedLimitOfImpugnations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[Rivanilson Costa - 08/08/2024 - J62 - BL15] Campo de apoio para preenchimento do valor “Limite de Impugnações Atingido” no Campo “Status Antigo”, quando hasReachedLimitOfImpugnations = TRUE.</description>
    <label>Limite de Impugnações Atingido</label>
    <type>Checkbox</type>
</CustomField>