force-app/main/default/objects/DisputedItem__c/fields/HaveDiscount__c.field-meta.xml
<CustomField>
    <fullName>HaveDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tem Desconto?</label>
    <type>Checkbox</type>
</CustomField>