force-app/main/default/objects/DisputedItem__c/fields/InitialTime__c.field-meta.xml
<CustomField>
    <fullName>InitialTime__c</fullName>
    <description>Data inicial da chamada na consulta de evento - Voice</description>
    <label>Data Inicial da Chamada</label>
    <type>DateTime</type>
</CustomField>