force-app/main/default/objects/DisputedItem__c/fields/InstanceProduct__c.field-meta.xml
<CustomField>
    <fullName>InstanceProduct__c</fullName>
    <label>Instância/Produto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>