force-app/main/default/objects/DisputedItem__c/fields/InterestValue__c.field-meta.xml
<CustomField>
    <fullName>InterestValue__c</fullName>
    <description>[Rivanilson Costa - 13/06/2024 - J62 - BL15] Valor de Juros, quando houver.</description>
    <label>Valor Juros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>