force-app/main/default/objects/DisputedItem__c/fields/IsConcession__c.field-meta.xml
<CustomField>
    <fullName>IsConcession__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concessão</label>
    <type>Checkbox</type>
</CustomField>