force-app/main/default/objects/DisputedItem__c/fields/ItemValue__c.field-meta.xml
<CustomField>
    <fullName>ItemValue__c</fullName>
    <description>Valor do Item do Bilhete na consulta de eventos e transações.</description>
    <label>Valor do Item</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>