force-app/main/default/objects/DisputedItem__c/fields/NameFull__c.field-meta.xml
<CustomField>
    <fullName>NameFull__c</fullName>
    <label>Nome Completo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>