force-app/main/default/objects/DisputedItem__c/fields/NetworkTechnology__c.field-meta.xml
<CustomField>
    <fullName>NetworkTechnology__c</fullName>
    <description>Tipo de tecnologia da linha na consulta de evento - Voice</description>
    <label>Network Technology</label>
    <length>30</length>
    <type>Text</type>
</CustomField>