force-app/main/default/objects/DisputedItem__c/fields/NetworkType__c.field-meta.xml
<CustomField>
    <fullName>NetworkType__c</fullName>
    <description>Classficação Rede Trafegada na consulta de evento - Voice.</description>
    <label>Classificação Rede Trafegada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>