force-app/main/default/objects/DisputedItem__c/fields/NORImpugnValue__c.field-meta.xml
<CustomField>
    <fullName>NORImpugnValue__c</fullName>
    <description>Valor da caixa de destino NOR</description>
    <label>Valor Impugnado NOR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>