force-app/main/default/objects/DisputedItem__c/fields/NORValue__c.field-meta.xml
<CustomField>
    <fullName>NORValue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Valor da caixa de origem NOR</description>
    <label>Valor NOR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>