force-app/main/default/objects/DisputedItem__c/fields/OfferId__c.field-meta.xml
<CustomField>
    <fullName>OfferId__c</fullName>
    <label>Id da Oferta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>