force-app/main/default/objects/DisputedItem__c/fields/OfferType__c.field-meta.xml
<CustomField>
    <fullName>OfferType__c</fullName>
    <label>Tipo da Oferta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>