force-app/main/default/objects/DisputedItem__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>[Rivanilson Costa - 13/06/2024 - J62 - BL15] Operação do item</description>
    <label>Operação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <label>Todas</label>
            </value>
            <value>
                <fullName>Outgoing Calls</fullName>
                <label>Chamadas Efetuadas</label>
            </value>
            <value>
                <fullName>Carried out Events</fullName>
                <label>Eventos Efetuados</label>
            </value>
            <value>
                <fullName>Realized Data</fullName>
                <label>Dados Efetuados</label>
            </value>
            <value>
                <fullName>Hired Services</fullName>
                <label>Serviços Contratados</label>
            </value>
            <value>
                <fullName>Hired SVA</fullName>
                <label>SVA Contratado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>