force-app/main/default/objects/DisputedItem__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Ordem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>