force-app/main/default/objects/DisputedItem__c/fields/OrderAction__c.field-meta.xml
<CustomField>
    <fullName>OrderAction__c</fullName>
    <label>Ação da Ordem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>