force-app/main/default/objects/DisputedItem__c/fields/OrderCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>OrderCompletionDate__c</fullName>
    <label>Data de Conclusão da Ordem</label>
    <type>Date</type>
</CustomField>