force-app/main/default/objects/DisputedItem__c/fields/OrderCreationDate__c.field-meta.xml
<CustomField>
    <fullName>OrderCreationDate__c</fullName>
    <label>Data de Criação da Ordem</label>
    <type>Date</type>
</CustomField>