force-app/main/default/objects/DisputedItem__c/fields/OrderType__c.field-meta.xml
<CustomField>
    <fullName>OrderType__c</fullName>
    <label>Tipo da Ordem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>