force-app/main/default/objects/DisputedItem__c/fields/PartnerId__c.field-meta.xml
<CustomField>
    <fullName>PartnerId__c</fullName>
    <description>Código do parceiro na consulta de transação de Crédito Antecipado.</description>
    <label>Código do Parceiro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>