force-app/main/default/objects/DisputedItem__c/fields/POAdvanceCreditCode__c.field-meta.xml
<CustomField>
    <fullName>POAdvanceCreditCode__c</fullName>
    <description>Campo que armazena o código PO na consulta de Crédito Antecipado</description>
    <label>PO Crédito Antecipado Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>