force-app/main/default/objects/DisputedItem__c/fields/PreviousStatus__c.field-meta.xml
<CustomField>
    <fullName>PreviousStatus__c</fullName>
    <description>[Rivanilson Costa - 13/06/2024 - J62 - BL15] Status Anterior do Bilhete</description>
    <label>Status Anterior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Impugned</fullName>
                <label>Impugnado</label>
            </value>
            <value>
                <fullName>Partially Impugned</fullName>
                <label>Impugnado Parcial</label>
            </value>
            <value>
                <fullName>Does Not Proceed</fullName>
                <label>Não Procede</label>
            </value>
            <value>
                <fullName>Not Contested</fullName>
                <label>Não Contestado</label>
            </value>
            <value>
                <fullName>Impugnation Limit Reached</fullName>
                <label>Limite de Impugnações Atingido</label>
            </value>
            <value>
                <fullName>NotStarted</fullName>
                <label>Não iniciado</label>
            </value>
            <value>
                <fullName>InAnalisys</fullName>
                <label>Em análise</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <label>Encerrado</label>
            </value>
            <value>
                <fullName>Concession</fullName>
                <label>Concessão</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <label>Procedente</label>
            </value>
            <value>
                <fullName>Denied</fullName>
                <label>Improcedente</label>
            </value>
            <value>
                <fullName>Contested</fullName>
                <label>Contestado</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <label>Cancelado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>