force-app/main/default/objects/DisputedItem__c/fields/ProductExternalId__c.field-meta.xml
<CustomField>
    <fullName>ProductExternalId__c</fullName>
    <description>Id retornado na consulta de Crédito Antecipado usado no cancelamento da PO</description>
    <label>Product External Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>