force-app/main/default/objects/DisputedItem__c/fields/ReasonForDispute__c.field-meta.xml
<CustomField>
    <fullName>ReasonForDispute__c</fullName>
    <label>Motivo Contestação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desistência do Produto</fullName>
            </value>
            <value>
                <fullName>Ativação Indevida</fullName>
            </value>
            <value>
                <fullName>A Pedido do Cliente</fullName>
            </value>
            <value>
                <fullName>Procedimento Interno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>