force-app/main/default/objects/DisputedItem__c/fields/ReasonForObjection__c.field-meta.xml
<CustomField>
    <fullName>ReasonForObjection__c</fullName>
    <description>[Rivanilson Costa - 13/06/2024 - J62 - BL15] Motivo Impugnação, dependente do Tipo de Impugnação.</description>
    <label>Motivo Impugnação</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TypeOfObjection__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Customer Request</fullName>
                <label>A Pedido do Cliente</label>
            </value>
            <value>
                <fullName>Internal Procedure</fullName>
                <label>Procedimento Interno</label>
            </value>
            <value>
                <fullName>Loyalty - Liberality (Concession)</fullName>
                <label>Fidelização - Liberalidade (Concessão)</label>
            </value>
            <value>
                <fullName>Rectification - Billing Failure</fullName>
                <label>Retificação - Falha de cobrança</label>
            </value>
            <value>
                <fullName>Ativação Indevida</fullName>
                <isActive>false</isActive>
                <label>Ativação Indevida</label>
            </value>
            <value>
                <fullName>Desistência do Produto</fullName>
                <isActive>false</isActive>
                <label>Desistência do Produto</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>