force-app/main/default/objects/DisputedItem__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Serviço</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
                <label>Dados</label>
            </value>
            <value>
                <fullName>Voice</fullName>
                <label>Voz</label>
            </value>
            <value>
                <fullName>Revalidation</fullName>
                <label>Promoção e Pacote Recorrente</label>
            </value>
            <value>
                <fullName>ScoreCredit</fullName>
                <label>Contratações do Crédito Antecipado</label>
            </value>
            <value>
                <fullName>PurchaseEvent</fullName>
                <label>Pacotes Avulsos</label>
            </value>
            <value>
                <fullName>SVA</fullName>
                <label>SVA Contratado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>