force-app/main/default/objects/DisputedItem__c/fields/ServiceDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>ServiceDefinitionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Definição de Atendimento</label>
    <referenceTo>ServiceDefinition__c</referenceTo>
    <relationshipLabel>Itens Contestados</relationshipLabel>
    <relationshipName>DisputedItems</relationshipName>
    <type>Lookup</type>
</CustomField>