force-app/main/default/objects/DisputedItem__c/fields/SNSImpugnValue__c.field-meta.xml
<CustomField>
    <fullName>SNSImpugnValue__c</fullName>
    <description>Valor da caixa de destino SNS</description>
    <label>Valor Impugnado SNS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>