force-app/main/default/objects/DisputedItem__c/fields/SNSValue__c.field-meta.xml
<CustomField>
    <fullName>SNSValue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Valor da caixa de origem SNS</description>
    <label>Valor SNS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>