force-app/main/default/objects/DisputedItem__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>Data/Hora do Evento</label>
    <type>DateTime</type>
</CustomField>