force-app/main/default/objects/DisputedItem__c/fields/SubscriberId__c.field-meta.xml
<CustomField>
    <fullName>SubscriberId__c</fullName>
    <label>Id do Assinante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>