force-app/main/default/objects/DisputedItem__c/fields/SubscriberLocation__c.field-meta.xml
<CustomField>
    <fullName>SubscriberLocation__c</fullName>
    <description>Origem da chamada na consulta de evento - Voice.</description>
    <label>Origem da Chamada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>