force-app/main/default/objects/DisputedItem__c/fields/TokenId__c.field-meta.xml
<CustomField>
    <fullName>TokenId__c</fullName>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>