force-app/main/default/objects/DisputedItem__c/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <label>Valor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>