force-app/main/default/objects/DisputedItem__c/fields/TotalChallengeValue__c.field-meta.xml
<CustomField>
    <fullName>TotalChallengeValue__c</fullName>
    <description>Valor total da impugnação após calculos. Concessão não gera calculo de impugnação. Apenas Retificação</description>
    <inlineHelpText>Valor total da impugnação após calculos. Concessão não gera calculo de impugnação. Apenas Retificação</inlineHelpText>
    <label>Valot Total Impugnado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>