force-app/main/default/objects/DisputedItem__c/fields/TrafficCase__c.field-meta.xml
<CustomField>
    <fullName>TrafficCase__c</fullName>
    <description>Tipo de tráfego retornado da consulta de evento - Voice.</description>
    <label>Tipo do Tráfego</label>
    <length>255</length>
    <type>Text</type>
</CustomField>