force-app/main/default/objects/DisputedItem__c/fields/TypeOfObjection__c.field-meta.xml
<CustomField>
    <fullName>TypeOfObjection__c</fullName>
    <description>[Rivanilson Costa - 13/06/2024 - J62 - BL15] Tipo de Impugnação, dependente do Status Anterior.</description>
    <label>Tipo Impugnação</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PreviousStatus__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Impugnation</fullName>
                <label>Impugnação</label>
            </value>
            <value>
                <fullName>Partial Impugnation</fullName>
                <label>Impugnação Parcial</label>
            </value>
            <value>
                <fullName>Does Not Proceed</fullName>
                <label>Não Procede</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>