force-app/main/default/objects/DisputedItem__c/fields/UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>UnitOfMeasure__c</fullName>
    <label>Saldo de Serviço Utilizado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kbytes</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
                <label>Eventos</label>
            </value>
            <value>
                <fullName>Seconds</fullName>
                <label>Segundos</label>
            </value>
            <value>
                <fullName>BRL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>