force-app/main/default/objects/DisputedItem__c/recordTypes/DisputedItemsBillingAmdocs.recordType-meta.xml
<RecordType>
    <fullName>DisputedItemsBillingAmdocs</fullName>
    <active>true</active>
    <description>Tipo de registro específico para os itens contestados das faturas dos produtos com origem VivoNext.</description>
    <label>Itens Contestados Next</label>
</RecordType>