force-app/main/default/objects/DisputedItem__c/recordTypes/PrepaidDisputedItems.recordType-meta.xml
<RecordType>
    <fullName>PrepaidDisputedItems</fullName>
    <active>true</active>
    <description>BL15 - J62 - Tipo de registro específico para os itens contestados das faturas dos produtos com origem Pre Pago</description>
    <label>Itens Contestados Pre Pago</label>
</RecordType>